WIP(#91): username add in progress
