# endpoints/src/main/kotlin/app/meetacy/backend/endpoint/ktor/ServerResponse.kt
@@ -10,7 +10,7 @@ data class Success<out T>(
 
 @Serializable
 class Failure(
-    val status: Boolean,
+    val status: Boolean = false,
     val errorCode: Int,
     val errorMessage: String
 ) {
@@ -22,19 +22,20 @@ class Failure(
         val LastNotificationIdInvalid = Failure(false, 5, "Please provide a valid notificationId")
 
         val InvalidNickname = Failure(false, 6, "Please provide a valid nickname")
-        val InvalidTitleOrDescription = Failure(false, 7, "Please provide a valid title or description")
+        val InvalidUsername = Failure(false, 7, "Please provide a valid username")
+        val InvalidTitleOrDescription = Failure(false, 8, "Please provide a valid title or description")
 
-        val FriendNotFound = Failure(false, 8, "Friend was not found")
-        val UserNotFound = Failure(false, 9, "FullUser not found")
+        val FriendNotFound = Failure(false, 9, "Friend was not found")
+        val UserNotFound = Failure(false, 10, "FullUser not found")
 
-        val MeetingAlreadyParticipate = Failure(false, 10, "You are already participating in this meeting")
-        val NullEditParams = Failure(false, 14, "Specify at least one edit parameter")
-        val FriendAlreadyAdded = Failure(false, 11, "Friend already added")
+        val MeetingAlreadyParticipate = Failure(false, 11, "You are already participating in this meeting")
+        val NullEditParams = Failure(false, 12, "Specify at least one edit parameter")
+        val FriendAlreadyAdded = Failure(false, 13, "Friend already added")
 
-        val ExpiredLink = Failure(false, 12, "This link was expired. Please consider to create a new one")
-        val LinkMaxAttemptsReached = Failure(false, 13, "You have reached max attempts for today. Please try again later.")
+        val ExpiredLink = Failure(false, 14, "This link was expired. Please consider to create a new one")
+        val LinkMaxAttemptsReached = Failure(false, 15, "You have reached max attempts for today. Please try again later.")
 
-        val ApiVersionIsNotSpecified = Failure(false, 14, "Please specify api version using header 'Api-Version'")
+        val ApiVersionIsNotSpecified = Failure(false, 16, "Please specify api version using header 'Api-Version'")
     }
 }
 
